[MM-38049] Fix permalink preview username spacing (#8705)

--- a/sass/components/_post-right.scss
+++ b/sass/components/_post-right.scss
@@ -142,6 +142,10 @@
                 max-height: 200px;
             }
         }
+
+        .post-preview .post__img {
+            width: 24px;
+        }
     }
 
     hr {
